--- a/css/main.css
+++ b/css/main.css
@@ -35,13 +35,13 @@ body {
     margin: 3em 0 1.75em 0;
 }
 
-.cover>h1 {
+.cover>.text>h1 {
     font-size: 24px;
     font-weight: 500;
     margin-bottom: .3em;
 }
 
-.cover>h2 {
+.cover>.text>h2 {
     font-size: 19px;
     font-weight: 300;
     opacity: .67;
@@ -54,11 +54,13 @@ body {
     margin-top: 1.75em;
 }
 
+.controls>img {
+    transition: .5s;
+}
+
 .controls>img:hover {
     cursor: pointer;
-    box-shadow: 0 0 40px 0 #ffffff;
-    background-color: #9191a150;
-    transition: .4s;
+    filter: drop-shadow(0 0 20px white);
 }
 
 .bar {
@@ -68,6 +70,12 @@ body {
 
 .bar img {
     width: 11.875em;
+    transition: .4s;
+}
+
+.bar img:hover {
+    cursor: pointer;
+    filter: drop-shadow(0 0 1px #ffffff);
 }
 
 .bar>p {
@@ -88,4 +96,9 @@ body {
 
 .nav>.nextPage img {
     width: 40px;
+    transition: .4s;
+}
+
+.nav>.nextPage img:hover {
+    filter: drop-shadow(0 0 25px white);
 }
